--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,8 +36,10 @@ basket.info.design.size=Select the size you want your design to be: \
   \nIf you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
 basket.add.to.basket=Add to basket
 basket.accept.and.pay=Accept & pay
-basket.price=Price:
-basket.terms.and.conditions.text=By clicking Create Account you state that you have read and agree to our 
+basket.price=Price 
+signup.terms.and.conditions.text=By clicking Create Account you state that you have read and agreed to our 
+signup.terms.and.conditions.link=Terms and conditions
+basket.terms.and.conditions.text=I have read and accepted the payment 
 basket.terms.and.conditions.link=Terms and conditions
 basket.subscribe=Subscribe to newsletter
 basket.tax=20% Tax
