--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -36,9 +36,11 @@ basket.info.design.size=Bestem størrelsen, som du ønsker på dit produkt. \
   \nHvis du ønsker et design, der har andre størrelsesforhold, kan du sende en e-mail til info@treecreate.dk. 
 basket.add.to.basket=Læg i kurv
 basket.accept.and.pay=Accepter & betal
-basket.price=Pris: 
-basket.terms.and.conditions.text=Jeg har læst og forstået
-basket.terms.and.conditions.link=vilkår og betingelser
+basket.price=Pris 
+signup.terms.and.conditions.text=Jeg har læst og forstået
+signup.terms.and.conditions.link=vilkår og betingelser
+basket.terms.and.conditions.text=Jeg har læst of forstået 
+basket.terms.and.conditions.link=handelsbetingelserne
 basket.subscribe=Få tilbud over e-mail
 basket.tax=20% Moms
 basket.total.price=SUM Pris 
