--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,9 +36,7 @@ basket.info.design.size=Select the size you want your design to be: \
   \nIf you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
 basket.add.to.basket=Add to basket
 basket.accept.and.pay=Accept & pay
-basket.price=Price 
-signup.terms.and.conditions.text=By clicking Create Account you state that you have read and agreed to our 
-signup.terms.and.conditions.link=Terms and conditions
+basket.price=Price
 basket.terms.and.conditions.text=I have read and accepted the payment 
 basket.terms.and.conditions.link=Terms and conditions
 basket.subscribe=Subscribe to newsletter
@@ -48,6 +46,7 @@ basket.amount=Amount
 basket.total=Total
 basket.save=Save
 basket.prod=Product
+basket.country=Country : 
 basket.denmark=Denmark
 basket.other=Other
 basket.city=City
@@ -57,6 +56,8 @@ basket.street.address=Address
 basket.names=Name
 basket.delivery.info=Delivery Info
 basket.back=Back
+basket.update.info=Update Info
+basket.issue.text=If you have any questions or issues with an order, you can contact us at info@treecreate.dk. 
 
 
 
@@ -76,6 +77,8 @@ account.info=Account Info
 account.tree.collection=Basket
 account.orders=Orders
 account.log.out=Log Out
+account.phone.number=Phone number : 
+
 
 
 
@@ -113,6 +116,13 @@ login.create=Create Account
 
 
 
+SIGNUP=SIGNUP
+
+signup.terms.and.conditions.text=By clicking Create Account you state that you have read and agreed to our 
+signup.terms.and.conditions.link=Terms and conditions
+
+
+
 HOMEPAGE=HOMEPAGE
 
 home.intro.title=Product
@@ -144,6 +154,7 @@ home.create.now=Design Your Tree
 home.subscribe.title=You can also submit your email to receive special offers here: 
 home.subscribe.input=Your e-mail...
 home.subscribe.button=Submit
+home.invalid.source=ERROR 404, there seems to be no matching page.
 
 
 
