--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -36,9 +36,7 @@ basket.info.design.size=Bestem størrelsen, som du ønsker på dit produkt. \
   \nHvis du ønsker et design, der har andre størrelsesforhold, kan du sende en e-mail til info@treecreate.dk. 
 basket.add.to.basket=Læg i kurv
 basket.accept.and.pay=Accepter & betal
-basket.price=Pris 
-signup.terms.and.conditions.text=Jeg har læst og forstået
-signup.terms.and.conditions.link=vilkår og betingelser
+basket.price=Pris
 basket.terms.and.conditions.text=Jeg har læst of forstået 
 basket.terms.and.conditions.link=handelsbetingelserne
 basket.subscribe=Få tilbud over e-mail
@@ -48,6 +46,7 @@ basket.amount=Antal
 basket.total=Total
 basket.save=Spare
 basket.prod=Produkt
+basket.country=Land : 
 basket.denmark=Danmark
 basket.other=Andet
 basket.city=By
@@ -57,6 +56,8 @@ basket.street.address=Adresse
 basket.names=Navn
 basket.delivery.info=Leveringsinfo 
 basket.back=Tilbage
+basket.update.info=Opdater Info
+basket.issue.text=Hvis du har nogen spørgsmål er du meget velkommen til at sende os en email på info@treecreate.dk . 
 
 
 
@@ -113,6 +114,13 @@ login.create=Opret Konto
 
 
 
+SIGNUP=SIGNUP
+
+signup.terms.and.conditions.text=Jeg har læst og forstået
+signup.terms.and.conditions.link=vilkår og betingelser
+
+
+
 HOMEPAGE=HOMEPAGE
 
 home.intro.title=Produkt
@@ -145,7 +153,7 @@ home.create.now=Design Dit Træ
 home.subscribe.title=Du kan også abonnere til vores e-mail liste for at få specielle tilbud her: 
 home.subscribe.input=Din e-mail...
 home.subscribe.button=Abonner
-
+home.invalid.source=ERROR 404, ingen side matcher dette link.
 
 
 
