--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -103,6 +103,7 @@ collection.name=Name:
 collection.size=Size:
 collection.amount=Amount:
 collection.checkout=Go to checkout
+collection.add.design=Add Design
 
 
 
