--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -101,6 +101,7 @@ collection.name=Navn:
 collection.size=Størrelse:
 collection.amount=Antal:
 collection.checkout=Gå til kassen
+collection.add.design=Nyt Design
 
 
 
