--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,8 +40,8 @@ basket.price=Price
 basket.terms.and.conditions.text=I have read and accepted the payment 
 basket.terms.and.conditions.link=Terms and conditions
 basket.subscribe=Subscribe to newsletter
-basket.tax=20% Tax
-basket.total.price=SUM Price
+basket.tax=moms 
+basket.total.price=Total Price
 basket.amount=Amount
 basket.total=Total
 basket.save=Save
