--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -40,8 +40,8 @@ basket.price=Pris
 basket.terms.and.conditions.text=Jeg har læst of forstået 
 basket.terms.and.conditions.link=handelsbetingelserne
 basket.subscribe=Få tilbud over e-mail
-basket.tax=20% Moms
-basket.total.price=SUM Pris 
+basket.tax=moms
+basket.total.price=Pris i alt
 basket.amount=Antal
 basket.total=Total
 basket.save=Spare
