--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -58,6 +58,9 @@ basket.delivery.info=Delivery Info
 basket.back=Back
 basket.update.info=Update Info
 basket.issue.text=If you have any questions or issues with an order, you can contact us at info@treecreate.dk. 
+basket.procent.off=Add four or more trees to your order in total and get 25% off your entire transaction.
+basket.note.one=Note: You can only purchase this tree when you have logged in and verified your email.
+basket.note.two=Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC certified.
 
 
 
