--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -34,7 +34,7 @@ basket.info.design.size=Bestem størrelsen, som du ønsker på dit produkt. \
   \n25 x 25 cm - 695kr\
   \n30 x 30 cm - 995kr\
   \nHvis du ønsker et design, der har andre størrelsesforhold, kan du sende en e-mail til info@treecreate.dk. 
-basket.add.to.basket=Læg i kurv
+basket.add.to.basket=Læg i Kurv
 basket.accept.and.pay=Accepter & betal
 basket.price=Pris
 basket.terms.and.conditions.text=Jeg har læst of forstået 
@@ -58,6 +58,10 @@ basket.delivery.info=Leveringsinfo
 basket.back=Tilbage
 basket.update.info=Opdater Info
 basket.issue.text=Hvis du har nogen spørgsmål er du meget velkommen til at sende os en email på info@treecreate.dk . 
+basket.procent.off=BEMÆRK: Hvis du køber 4 stk i alt, får du 25% rabat på hele købet.
+basket.note.one=Bemærk: Du kan først gennemfører dit køb når du har godkendt din email med den verifications email vi har sendt.
+basket.note.two=Bemærk: Indpakningen, som du modtager produktet i, er lavet af 100% FSC certificeret genbrugspapir.
+
 
 
 
