--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,9 @@ navbar.profile=Profile
 
 FAMILYTREE=FAMILYTREE
 
+familyTree.info.how.to.title=How does it work?
+familyTree.info.how.to=Click anywhere on the tree to create a new box and start writing in the names. Press the x that comes from hovering the box\
+  to remove it and the arrows to change its position.
 familyTree.info.banner.text.name=Banner text
 familyTree.info.banner.text=Name box size: make them larger for better visibility on your design. If you make the name boxes very small, it \
   is important you purchase the larger designs like 30x30cm, so the text is readable. 
