--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -8,6 +8,9 @@ navbar.profile=Profil
 
 FAMILYTREE=FAMILYTREE
 
+familyTree.info.how.to.title=Hvordan virker det? 
+familyTree.info.how.to=Tryk et vilkårligt sted på træet for at lave en kasse og begynd at skrive navne ind. Tryk på krydset \
+  der popper op på kassen for at fjerne den igen, eller tryk på pilene for at rykke rundt på kassen.
 familyTree.info.banner.text.name=Banner tekst
 familyTree.info.banner.text=Teksten du ønsker, der skal være på banneret. Eks. ”Familien Hanson”, ”Familietræet” eller ”Vennetræet”. \
   Hvis du ikke ønsker et banner, kan det fjernes ved at vælge et andet banner design. 
