--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,8 +19,9 @@ familyTree.info.font.style=Select the font you like the most.
 familyTree.info.big.font.name=Big font size
 familyTree.info.big.font=Make the font size large. There will be less space for characters, but the text will be more visible on your design. 
 familyTree.info.box.size.name=Box size
-familyTree.info.box.size=Name box size: make them larger for better visibility on your design. If you make the name boxes very small, it is \
-  important you purchase the larger designs like 30x30cm, so the text is readable.
+familyTree.info.box.size=Name-box size: Make them larger for better visibility on your design. If you make the name boxes very small, it is \
+  important you purchase the larger designs like 30x30cm, so the text is readable. You can only change the size of all the boxes at once. \
+  You cannot only change the size for one.
 familyTree.option.save=Save
 familyTree.option.add=Add to basket
 familyTree.familyTree=Family Tree
