--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -20,7 +20,8 @@ familyTree.info.big.font.name=Stor font
 familyTree.info.big.font=Stor skrift. Begrænser mængden af tekst, der er plads til i navne kasserne. Slå fra, hvis du ønsker mere plads. 
 familyTree.info.box.size.name=Boks størrelse
 familyTree.info.box.size=Navnekassernes størrelse. Gør dem ekstra store for bedre synlighed. Hvis navnekasserne er små, er det vigtigt, \
-  du køber et design, der er 30x30 cm, så teksten er tydelig nok. 
+  du køber et design, der er 30x30 cm, så teksten er tydelig nok. Du kan kun ændre størrelsen på alle navnekasserne på en gang. Man kan \
+  ikke gøre det for navnekasserne enkeltvis.
 familyTree.option.save=Gem
 familyTree.option.add=Læg i kurv
 familyTree.familyTree=Familietræ
