--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -74,7 +74,7 @@ cookie.title=Cookies Information
 cookie.text=By clicking ACCEPT, you are agreeing with the cookie 
 cookie.link=terms and conditions
 cookie.text.two= of this page.
-cookie.accept=I ACCEPT
+cookie.accept=ACCEPT
 
 
 
@@ -127,7 +127,7 @@ login.create=Create Account
 SIGNUP=SIGNUP
 
 signup.terms.and.conditions.text=By clicking Create Account you state that you have read and agreed to our 
-signup.terms.and.conditions.link=Terms and conditions
+signup.terms.and.conditions.link=terms and conditions
 
 
 
