--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -73,7 +73,7 @@ COOKIE=COOKIE
 
 cookie.title=Cookie Information
 cookie.text=Ved at trykke ACCEPTER, accepterer du 
-cookie.link=vilkår og betingelser
+cookie.link= vilkår og betingelser
 cookie.text.two= for denne side.
 cookie.accept=ACCEPTER 
 
@@ -125,7 +125,7 @@ login.create=Opret Konto
 
 SIGNUP=SIGNUP
 
-signup.terms.and.conditions.text=Jeg har læst og forstået
+signup.terms.and.conditions.text=Ved at clicke Opret Konto accepterer du at du har læst og forstået Treecreate.dk's 
 signup.terms.and.conditions.link=vilkår og betingelser
 
 
