--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,7 +56,8 @@ basket.other=Other
 basket.city=City
 basket.post.code=Postcode 
 basket.phone.number=Phone nr
-basket.street.address=Address 
+basket.street.address=Address
+basket.street.address2=Address 2
 basket.names=Name
 basket.delivery.info=Delivery Info
 basket.back=Back
