--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -57,6 +57,7 @@ basket.city=By
 basket.post.code=Postnummer
 basket.phone.number=Telefon nr
 basket.street.address=Adresse 
+basket.street.address2=Adresse 2
 basket.names=Navn
 basket.delivery.info=Leveringsinfo 
 basket.back=Tilbage
