--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,19 +9,15 @@ navbar.profile=Profile
 FAMILYTREE=FAMILYTREE
 
 familyTree.info.how.to.title=How does it work?
-familyTree.info.how.to=Click anywhere on the tree to create a new box and start writing in the names. Press the x that comes from hovering the box\
-  to remove it and the arrows to change its position.
+familyTree.info.how.to=Click anywhere on the tree to create a new box and begin designing your very own family tree.
 familyTree.info.banner.text.name=Banner text
-familyTree.info.banner.text=Name box size: make them larger for better visibility on your design. If you make the name boxes very small, it \
-  is important you purchase the larger designs like 30x30cm, so the text is readable. 
+familyTree.info.banner.text=Type what you want to have written on the banner on the base of the tree, or disable it if you would rather have a cleaner design.
 familyTree.info.banner.design=Decide what banner design you want. Select the “none” to remove the banner. 
 familyTree.info.font.style=Select the font you like the most. 
 familyTree.info.big.font.name=Big font size
 familyTree.info.big.font=Make the font size large. There will be less space for characters, but the text will be more visible on your design. 
-familyTree.info.box.size.name=Box size
-familyTree.info.box.size=Name-box size: Make them larger for better visibility on your design. If you make the name boxes very small, it is \
-  important you purchase the larger designs like 30x30cm, so the text is readable. You can only change the size of all the boxes at once. \
-  You cannot only change the size for one.
+familyTree.info.box.size.name=Size of boxes
+familyTree.info.box.size=Make them larger for better visibility of your design.
 familyTree.option.save=Save
 familyTree.option.add=Add to basket
 familyTree.familyTree=Family Tree
@@ -30,14 +26,10 @@ familyTree.familyTree=Family Tree
 
 BASKET=BASKET
 
-basket.info.amount.name=Amount 
+basket.info.amount.name=Quantity 
 basket.info.amount=Amount of designs you wish to buy. If you buy 4 or more, you will get 25% off the full price.
 basket.info.design.size.name=Product size
-basket.info.design.size=Select the size you want your design to be: \
-  \n( 20 x 20 cm - 495kr ), \
-  \n( 25 x 25 cm - 695kr ),\
-  \n( 30 x 30 cm - 995kr ).\
-  \nIf you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
+basket.info.design.size=If you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
 basket.add.to.basket=Add to basket
 basket.accept.and.pay=Accept & pay
 basket.price=Price
@@ -46,7 +38,7 @@ basket.terms.and.conditions.link=Terms and conditions
 basket.subscribe=Subscribe to newsletter
 basket.tax=moms 
 basket.total.price=Total Price
-basket.amount=Amount
+basket.amount=Quanity
 basket.total=Total
 basket.save=Save
 basket.prod=Product
@@ -56,14 +48,15 @@ basket.other=Other
 basket.city=City
 basket.post.code=Postcode 
 basket.phone.number=Phone nr
-basket.street.address=Address
-basket.street.address2=Address 2
+basket.street.address=Address 
 basket.names=Name
+basket.email=Email
+basket.street.address2=Address 2
 basket.delivery.info=Delivery Info
 basket.back=Back
 basket.update.info=Update Info
 basket.issue.text=If you have any questions or issues with an order, you can contact us at info@treecreate.dk. 
-basket.procent.off=Add four or more trees to your order in total and get 25% off your entire transaction.
+basket.procent.off=Add four or more trees to your basket and get 25% off your entire transaction.
 basket.note.one=Note: You can only purchase this tree when you have logged in and verified your email.
 basket.note.two=Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC certified.
 
@@ -90,6 +83,8 @@ account.phone.number=Phone number :
 
 
 
+
+
 MOBILE=MOBILE
 
 mobile.text=Treecreate does not support modifying or creating a tree on mobile devices yet. (coming soon)
@@ -109,7 +104,7 @@ collection.delete=Delete
 collection.boxes=Boxes: 
 collection.name=Name: 
 collection.size=Size:
-collection.amount=Amount:
+collection.amount=Quantity: 
 collection.checkout=Go to checkout
 collection.add.design=Add Design
 
@@ -170,7 +165,7 @@ home.invalid.source=ERROR 404, there seems to be no matching page.
 FOOTER=FOOTER
 
 footer.contact.title=Contact
-footer.contact.text=TreeCreate CVR nr. 38 45 31 14\nE-mail: info@treecreate.dk\nPhone nr. +45 26 19 23 27
+footer.contact.text=Treecreate CVR nr. 38 45 31 14\nE-mail: info@treecreate.dk\nPhone nr. +45 26 19 23 27
 footer.product.title=Product
 footer.product.text=Every purchase plants a tree Eco-Friendly packaging Produced in Denmark
 footer.address.title=Address
