--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -172,6 +172,8 @@ footer.address.title=Address
 footer.address.text=Hillerødgade 69, 3.\n2200, Copenhagen\nDenmark
 footer.payment.title=Payment methods
 footer.copyright.text=Copyright © 2020 TreeCreate All Rights Reserved.
+footer.cookie.policy=Cookie Policy
+footer.terms.of.service=Terms of Service
 
 
 
