--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -177,6 +177,8 @@ footer.address.title=Adresse
 footer.address.text=Hillerødgade 69, 3.\n2200, København\nDanmark
 footer.payment.title=Betalingsmetoder
 footer.copyright.text=Alle rettigheder reserveret © 2020 TreeCreate
+footer.cookie.policy=Cookie Politik
+footer.terms.of.service=Brugervilkår 
 
 
 
