--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -59,6 +59,19 @@ basket.issue.text=If you have any questions or issues with an order, you can con
 basket.procent.off=Add four or more trees to your basket and get 25% off your entire transaction.
 basket.note.one=Note: You can only purchase this tree when you have logged in and verified your email.
 basket.note.two=Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC certified.
+basket.order.product =Family Tree -
+basket.popup.validate =There are no orders to purchase
+basket.popup.validate.name=The name is required
+basket.popup.validate.phone.number=The phone number is required
+basket.popup.validate.email=The email is required
+basket.popup.validate.street.address=The street address is required
+basket.popup.validate.city=The city is required
+basket.popup.validate.postcode=The postcode is required
+basket.popup.validate.terms.and.conditions=You have to accept our terms and conditions
+basket.popup.discount.empty=The discount code cannot be empty
+basket.popup.discount.not.valid=The provided discount code is not valid
+basket.popup.discount.not.active=The provided discount code is no longer active
+basket.popup.discount.accepted=Code accepted, applying the discount
 
 
 
@@ -78,10 +91,13 @@ account.info=Account Info
 account.tree.collection=Basket
 account.orders=Orders
 account.log.out=Log Out
-account.phone.number=Phone number : 
-
-
-
+account.phone.number=Phone number :
+account.popup.password.reset.success=The password has been updated
+account.popup.password.reset.failure=Something went wrong while updating the password, please try again later
+account.popup.password.reset.empty=The password field cannot be empty
+account.popup.password.reset.mismatch=The passwords don't match
+account.password.reset.new.password=New password:
+account.password.reset.repeat.password=Repeat password:
 
 
 
@@ -117,6 +133,10 @@ login.confirm.password=Confirm password
 login.forgot.password=Forgot password?
 login.sign.up=SIGN UP
 login.create=Create Account
+login.popup.submit.email=Email is required to login
+login.popup.submit.password=Password is required to login
+login.popup.valid=Welcome Back!
+login.popup.invalid=The credentials are invalid. Try again
 
 
 
@@ -124,6 +144,12 @@ SIGNUP=SIGNUP
 
 signup.terms.and.conditions.text=By clicking Create Account you state that you have read and agreed to our 
 signup.terms.and.conditions.link=terms and conditions
+signup.popup.email=Email is required to register a new account
+signup.popup.password=Password is required to register a new account
+signup.popup.password.mismatch=The passwords don't match
+signup.popup.email.invalid=Provided email does not seem to be a valid email
+signup.popup.success=Thanks for joining Treecreate!
+signup.popup.already.exists=An account with this email already exists. Try again
 
 
 
@@ -218,3 +244,36 @@ landing.footer.product.text=Every purchase plants a tree\nEco-Friendly packaging
 landing.footer.address.title=Address
 landing.footer.address.text=Hillerødgade 69, 3.\n2200, Copenhagen\nDenmark
 landing.footer.copyright=Copyright © 2020 TreeCreate All Rights Reserved.
+
+
+
+ORDERS=ORDERS
+
+orders.details.status.initial=Waiting for payment (May take a couple minutes)
+orders.details.status.new=Payment Successful
+orders.details.status=Status :
+orders.details.total.price=Total Price : 
+orders.details.transaction.id=Transaction ID : 
+orders.details.created.on=Created on :
+orders.details.expected.delivery=Expected Delivery Date :
+orders.details.address=Address : 
+orders.details.address2=Address 2 : 
+orders.details.city=City :
+orders.details.postcode=Postcode :
+orders.details.amount=amount :
+orders.details.price=price :
+orders.designs=Designs :
+orders.address=Delivery Address :
+orders.complete.payment=Complete Payment
+orders.view=View
+
+
+
+PRODUCT.TEMPLATE=PRODUCT TEMPLATE
+
+productTemplate.navigationContainer = Please login before adding items to the basket
+productTemplate.verification.email.success=The email has been sent
+productTemplate.verification.email.failure=Something went wrong while sending the email. Try again later or contact support at info@treecreate.dk
+productTemplate.newsletter.email=Provided email does not seem to be a valid email
+productTemplate.newsletter.success= has been added to the newsletter list
+productTemplate.newsletter.failure=An issue occurred when trying to join the newsletter 
