--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -66,7 +66,19 @@ basket.issue.text=Hvis du har nogen spørgsmål er du meget velkommen til at sen
 basket.procent.off=BEMÆRK: Hvis du køber 4 stk i alt, får du 25% rabat på hele købet.
 basket.note.one=Bemærk: Du kan først gennemfører dit køb når du har godkendt din email med den verifications email vi har sendt.
 basket.note.two=Bemærk: Indpakningen, som du modtager produktet i, er lavet af 100% FSC certificeret genbrugspapir.
-
+basket.order.product =Lorem Ipsum - 
+basket.popup.validate =Lorem Ipsum
+basket.popup.validate.name=Lorem Ipsum
+basket.popup.validate.phone.number=Lorem Ipsum
+basket.popup.validate.email=Lorem Ipsum
+basket.popup.validate.street.address=Lorem Ipsum
+basket.popup.validate.city=Lorem Ipsum
+basket.popup.validate.postcode=Lorem Ipsum
+basket.popup.validate.terms.and.conditions=Lorem Ipsum
+basket.popup.discount.empty=Lorem Ipsum
+basket.popup.discount.not.valid=Lorem Ipsum
+basket.popup.discount.not.active=Lorem Ipsum
+basket.popup.discount.accepted=Lorem Ipsum
 
 
 
@@ -82,10 +94,17 @@ cookie.accept=ACCEPTER
 
 ACCOUNT=ACCOUNT
 
-account.info=Account Info
+account.info=Lorem Ipsum
 account.tree.collection=Kurv
 account.orders=Ordrer
 account.log.out=Log Ud
+account.popup.password.reset.success=Lorem Ipsum   
+account.popup.password.reset.failure=Lorem Ipsum
+account.popup.password.reset.empty=Lorem Ipsum
+account.popup.password.reset.mismatch=Lorem Ipsum
+account.password.reset.new.password=Lorem Ipsum
+account.password.reset.repeat.password=Lorem Ipsum
+
 
 
 
@@ -121,6 +140,10 @@ login.confirm.password=Bekræft Kode
 login.forgot.password=Glemt Kode?
 login.sign.up=OPRET NY
 login.create=Opret Konto
+login.popup.submit.email=Lorem Ipsum
+login.popup.submit.password=Lorem Ipsum
+login.popup.valid=Lorem Ipsum
+login.popup.invalid=Lorem Ipsum
 
 
 
@@ -128,6 +151,12 @@ SIGNUP=SIGNUP
 
 signup.terms.and.conditions.text=Ved at clicke Opret Konto accepterer du at du har læst og forstået Treecreate.dk's 
 signup.terms.and.conditions.link=vilkår og betingelser
+signup.popup.email=Lorem Ipsum
+signup.popup.password=Lorem Ipsum
+signup.popup.password.mismatch=Lorem Ipsum
+signup.popup.email.invalid=Lorem Ipsum
+signup.popup.success=Lorem Ipsum
+signup.popup.already.exists=Lorem Ipsum
 
 
 
@@ -226,3 +255,36 @@ landing.footer.product.text=Når du bestiller planter du et trå\nIndpakning af 
 landing.footer.address.title=Adresse
 landing.footer.address.text=Danmark\nKøbenhavn
 landing.footer.copyright=Copyright © 2020 TreeCreate All Rights Reserved.
+
+
+
+ORDERS=ORDERS
+
+orders.details.status.initial=Lorem Ipsum
+orders.details.status.new=Lorem Ipsum
+orders.details.status=Lorem Ipsum :
+orders.details.total.price=Lorem Ipsum :
+orders.details.transaction.id=Lorem Ipsum :
+orders.details.created.on=Lorem Ipsum :
+orders.details.expected.delivery=Lorem Ipsum :
+orders.details.address=Lorem Ipsum :
+orders.details.address2=Lorem Ipsum :
+orders.details.city=Lorem Ipsum :
+orders.details.postcode=Lorem Ipsum :
+orders.details.amount=Lorem Ipsum :
+orders.details.price=Lorem Ipsum :
+orders.designs=Lorem Ipsum :
+orders.address=Lorem Ipsum :
+orders.complete.payment=Lorem Ipsum
+orders.view=Lorem Ipsum
+
+
+
+PRODUCT.TEMPLATE=PRODUCT TEMPLATE
+
+productTemplate.navigationContainer = Lorem Ipsum
+productTemplate.verification.email.success=Lorem Ipsum
+productTemplate.verification.email.failure=Lorem Ipsum
+productTemplate.newsletter.email=Lorem Ipsum
+productTemplate.newsletter.success=Lorem Ipsum
+productTemplate.newsletter.failure=Lorem Ipsum
