--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,14 +10,17 @@ FAMILYTREE=FAMILYTREE
 
 familyTree.info.how.to.title=How does it work?
 familyTree.info.how.to=Click anywhere on the tree to create a new box and begin designing your very own family tree.
+
 familyTree.info.banner.text.name=Banner text
-familyTree.info.banner.text=Type what you want to have written on the banner on the base of the tree, or disable it if you would rather have a cleaner design.
+familyTree.info.banner.text=Type what you want to have written on the banner on the base of the tree, or disable it if \
+  you would rather have a cleaner design.
 familyTree.info.banner.design=Decide what banner design you want. Select the “none” to remove the banner. 
 familyTree.info.font.style=Select the font you like the most. 
 familyTree.info.big.font.name=Big font size
 familyTree.info.big.font=Make the font size large. There will be less space for characters, but the text will be more visible on your design. 
 familyTree.info.box.size.name=Size of boxes
 familyTree.info.box.size=Make them larger for better visibility of your design.
+
 familyTree.option.save=Save
 familyTree.option.add=Add to basket
 familyTree.familyTree=Family Tree
@@ -29,7 +32,8 @@ BASKET=BASKET
 basket.info.amount.name=Quantity 
 basket.info.amount=Amount of designs you wish to buy. If you buy 4 or more, you will get 25% off the full price.
 basket.info.design.size.name=Product size
-basket.info.design.size=If you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
+basket.info.design.size=Select the size you want your design to be.\
+  If you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
 basket.add.to.basket=Add to basket
 basket.accept.and.pay=Accept & pay
 basket.price=Price
@@ -49,9 +53,9 @@ basket.city=City
 basket.post.code=Postcode 
 basket.phone.number=Phone nr
 basket.street.address=Address 
+basket.street.address2=Address 2
 basket.names=Name
 basket.email=Email
-basket.street.address2=Address 2
 basket.delivery.info=Delivery Info
 basket.back=Back
 basket.update.info=Update Info
@@ -107,7 +111,7 @@ mobile.text=Treecreate does not support modifying or creating a tree on mobile d
 mobile.text.two=We hope you can return to 
 mobile.text.treecreate=Treecreate.dk
 mobile.text.three= on a laptop or computer to create your tree design.
-mobile.text.four=You can submit you e-mail here for special offers: 
+mobile.text.four=You can submit you email here for special offers: 
 
 
 
@@ -180,18 +184,32 @@ home.team.text.members=\
 home.team.text.two=\nOur goal is to create a sustainable company, that produces specialized and unique wood design for every customer. We aim to \
   have as little waste in the production process as possible. In addition to that, we support wildlife by donating a part of the money made from \
   each purchase to plant a tree. That way we make the world a better and greener place - one tree at the time.
+
 home.create.now=Design Your Tree
 home.subscribe.title=You can also submit your email to receive special offers here: 
-home.subscribe.input=Your e-mail...
+home.subscribe.input=Your email...
 home.subscribe.button=Submit
 home.invalid.source=ERROR 404, there seems to be no matching page.
+home.forgot.password.title=Reset password
+home.verification.failed=Verification has failed - perhaps you have already verified? You are also welcome to contact support via info@treecreate.dk. 
+home.how.to.verify.email.title=How to verify your email
+home.how.to.verify.email.text1=When creating a new account, a verification email has been sent to your inbox
+home.how.to.verify.email.text2=Click the link in the email to verify your account
+home.how.to.verify.email.text3=You can resend the verification email if you have not received the message:
+home.resend.email=Resend email
+home.thanks.for.verifying=Thank you for verifying
+home.type.email=Type your email . . .
+home.type.password=Type your password . . . 
+home.verify.email.text1=Please
+home.verify.email.text2=Verify
+home.verify.email.text3=your email to continue using our website
 
 
 
 FOOTER=FOOTER
 
 footer.contact.title=Contact
-footer.contact.text=Treecreate CVR nr. 38 45 31 14\nE-mail: info@treecreate.dk\nPhone nr. +45 26 19 23 27
+footer.contact.text=Treecreate CVR nr. 38 45 31 14\nEmail: info@treecreate.dk\nPhone nr. +45 26 19 23 27
 footer.product.title=Product
 footer.product.text=Every purchase plants a tree Eco-Friendly packaging Produced in Denmark
 footer.address.title=Address
@@ -200,6 +218,39 @@ footer.payment.title=Payment methods
 footer.copyright.text=Copyright © 2020 TreeCreate All Rights Reserved.
 footer.cookie.policy=Cookie Policy
 footer.terms.of.service=Terms of Service
+
+
+
+ORDERS=ORDERS
+
+orders.details.status.initial=Waiting for payment (May take a couple minutes)
+orders.details.status.new=Payment Successful
+orders.details.status=Status : 
+orders.details.total.price=Total Price : 
+orders.details.transaction.id=Transaction ID : 
+orders.details.created.on=Created on : 
+orders.details.expected.delivery=Expected Delivery Date : 
+orders.details.address=Address : 
+orders.details.address2=Address 2 : 
+orders.details.city=City : 
+orders.details.postcode=Postcode : 
+orders.details.amount=amount : 
+orders.details.price=price : 
+orders.designs=Designs : 
+orders.address=Delivery Address : 
+orders.complete.payment=Complete Payment
+orders.view=View
+
+
+
+PRODUCT.TEMPLATE=PRODUCT TEMPLATE
+
+productTemplate.navigationContainer = Please login before adding items to the basket
+productTemplate.verification.email.success=The verification email has been sent
+productTemplate.verification.email.failure=Something went wrong while sending the email. Try again later or contact support at info@treecreate.dk
+productTemplate.newsletter.email=Provided email does not seem to be a valid email
+productTemplate.newsletter.success= has been added to the newsletter list
+productTemplate.newsletter.failure=An issue occurred when trying to join the newsletter
 
 
 
@@ -226,15 +277,18 @@ landing.generalInfo.waste.text=When you buy a design you're automatically planti
    The packaging is made of 100% recycled FSC certified paper and therefore creates zero waste.
 landing.review.peter.title=Peter
 landing.review.peter.text="Extremely detailed and some really nice wood. Now my Christmas presents for the whole family are sorted! Many thanks"
+
 landing.review.amalie.title=Amalie
 landing.review.amalie.text="Oh my, it's so beautiful! I love the little stand that comes along with it. \
    We also got the design so we could print it out. Great service!"
 landing.review.emilie.title=Emilie
 landing.review.emilie.text="I'm so happy about my family tree. My grandmother will be so happy when she sees it, I'm sure! Thank you Treecreate!"
+
 landing.review.desi.title=Cristian
 landing.review.desi.text="I love the tree! It is some great quality wood and the design is cut with such detail it's amazing!"
 landing.review.anna.title=Anna
 landing.review.anna.text="It's SO pretty. I love the family tree and how it ended up. I have it in the living room and I get so happy every time I see it."
+
 landing.review.laura.title=Laura
 landing.review.laura.text="I bought one for my grandparent wedding and they loved it! It's so pretty."
 landing.footer.contact.title=Contact
@@ -244,36 +298,3 @@ landing.footer.product.text=Every purchase plants a tree\nEco-Friendly packaging
 landing.footer.address.title=Address
 landing.footer.address.text=Hillerødgade 69, 3.\n2200, Copenhagen\nDenmark
 landing.footer.copyright=Copyright © 2020 TreeCreate All Rights Reserved.
-
-
-
-ORDERS=ORDERS
-
-orders.details.status.initial=Waiting for payment (May take a couple minutes)
-orders.details.status.new=Payment Successful
-orders.details.status=Status :
-orders.details.total.price=Total Price : 
-orders.details.transaction.id=Transaction ID : 
-orders.details.created.on=Created on :
-orders.details.expected.delivery=Expected Delivery Date :
-orders.details.address=Address : 
-orders.details.address2=Address 2 : 
-orders.details.city=City :
-orders.details.postcode=Postcode :
-orders.details.amount=amount :
-orders.details.price=price :
-orders.designs=Designs :
-orders.address=Delivery Address :
-orders.complete.payment=Complete Payment
-orders.view=View
-
-
-
-PRODUCT.TEMPLATE=PRODUCT TEMPLATE
-
-productTemplate.navigationContainer = Please login before adding items to the basket
-productTemplate.verification.email.success=The email has been sent
-productTemplate.verification.email.failure=Something went wrong while sending the email. Try again later or contact support at info@treecreate.dk
-productTemplate.newsletter.email=Provided email does not seem to be a valid email
-productTemplate.newsletter.success= has been added to the newsletter list
-productTemplate.newsletter.failure=An issue occurred when trying to join the newsletter 
