--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ navbar.profile=Profile
 FAMILYTREE=FAMILYTREE
 
 familyTree.info.how.to.title=How does it work?
-familyTree.info.how.to=Click anywhere on the tree to create a new box and begin designing your very own family tree.
+familyTree.info.how.to=Click anywhere on the tree to create a new box. You can save your tree by adding it to basket (it can still be edited later).
 
 familyTree.info.banner.text.name=Banner text
 familyTree.info.banner.text=Type what you want to have written on the banner on the base of the tree, or disable it if \
