--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -9,8 +9,7 @@ navbar.profile=Profil
 FAMILYTREE=FAMILYTREE
 
 familyTree.info.how.to.title=Hvordan virker det? 
-familyTree.info.how.to=Tryk et vilkårligt sted på træet for at lave en kasse og begynd at skrive navne ind. Tryk på krydset \
-  der popper op på kassen for at fjerne den igen, eller tryk på pilene for at rykke rundt på kassen.
+familyTree.info.how.to=Tryk et vilkårligt sted på træet for at lave en navne kasse. Gem designet ved at lægge det i kurven (Du vil stadig kunne rette det).
 familyTree.info.banner.text.name=Banner tekst
 familyTree.info.banner.text=Teksten du ønsker, der skal være på banneret. Eks. ”Familien Hanson”, ”Familietræet” eller ”Vennetræet”. \
   Hvis du ikke ønsker et banner, kan det fjernes ved at vælge et andet banner design. 
@@ -162,9 +161,9 @@ HOMEPAGE=HOMEPAGE
 
 home.intro.title=Produkt
 home.intro.text=Specialiseret træ design. Du laver designet – vi laserprinter det i et flot stykke egetræ og sender det \
-  direkte til din dør. Med utallige muligheder for at skabe dit helt design med tekst, font og størrelsesforhold, bliver \
+  direkte til din dør. Med mange muligheder for at skabe dit helt design med tekst, font og størrelsesforhold, bliver \
   hvert produkt helt unikt.
-home.sizes.title=Størrelser
+home.size.title=Størrelser
 home.size.text=Efter du har skabt dit design, kan du vælge hvilken størrelse, du vil have det laserprintet i. Vi har lige \
   nu 3 størrelser, du kan vælge imellem:
 home.size.text.two=Hvis du ønsker en anden størrelse, er du velkommen til at sende os en email på info@treecreate.dk. \
